--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@supabase/supabase-js": "^1.31.1",
     "dotenv": "^16.0.0",
+    "embla-carousel": "^6.2.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
