--- a/package.json
+++ b/package.json
@@ -23,8 +23,5 @@
     "react-icons": "^4.3.1",
     "sass": "^1.49.9"
   },
-  "devDependencies": {
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
-  }
+  "devDependencies": {}
 }
